// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderCard has all required ids set when rendering a start action 1`] = `
.c0 {
  position: relative;
}

.c2 {
  background: #ffffff;
  padding-block: 12px;
  padding-inline: 12px;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  border-color: #eaeaef;
  box-shadow: 0px 1px 4px rgba(33, 33, 52, 0.1);
  cursor: pointer;
}

.c4 {
  position: relative;
  z-index: 2;
}

.c6 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-block-start: 8px;
  padding-inline-end: 12px;
  padding-block-end: 8px;
  padding-inline-start: 12px;
  border-radius: 4px;
}

.c8 {
  position: relative;
  overflow: hidden;
  max-width: 100%;
}

.c11 {
  padding-block: 4px;
  padding-inline: 4px;
  max-width: 100%;
}

.c15 {
  right: 16px;
}

.c13 {
  font-size: 1.4rem;
  line-height: 1.43;
  font-weight: 500;
  color: currentcolor;
}

.c3 {
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.c9 {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}

.c17 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  height: 18px;
  min-width: 18px;
  margin: 0;
  border-radius: 4px;
  border: 1px solid #c0c0cf;
  -webkit-appearance: none;
  background-color: #ffffff;
  cursor: pointer;
}

.c5:checked {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5:checked:after {
  content: '';
  display: block;
  position: relative;
  background: url("data:image/svg+xml,%3csvg%20width='10'%20height='8'%20viewBox='0%200%2010%208'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M8.55323%200.396973C8.63135%200.316355%208.76051%200.315811%208.83931%200.395768L9.86256%201.43407C9.93893%201.51157%209.93935%201.6359%209.86349%201.7139L4.06401%207.67724C3.9859%207.75755%203.85707%207.75805%203.77834%207.67834L0.13866%203.99333C0.0617798%203.91549%200.0617102%203.79032%200.138504%203.7124L1.16213%202.67372C1.24038%202.59432%201.36843%202.59422%201.4468%202.67348L3.92174%205.17647L8.55323%200.396973Z'%20fill='white'%20/%3e%3c/svg%3e") no-repeat no-repeat center center;
  width: 10px;
  height: 10px;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.c5:checked:disabled:after {
  background: url("data:image/svg+xml,%3csvg%20width='10'%20height='8'%20viewBox='0%200%2010%208'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M8.55323%200.396973C8.63135%200.316355%208.76051%200.315811%208.83931%200.395768L9.86256%201.43407C9.93893%201.51157%209.93935%201.6359%209.86349%201.7139L4.06401%207.67724C3.9859%207.75755%203.85707%207.75805%203.77834%207.67834L0.13866%203.99333C0.0617798%203.91549%200.0617102%203.79032%200.138504%203.7124L1.16213%202.67372C1.24038%202.59432%201.36843%202.59422%201.4468%202.67348L3.92174%205.17647L8.55323%200.396973Z'%20fill='%238E8EA9'%20/%3e%3c/svg%3e") no-repeat no-repeat center center;
}

.c5:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c5:indeterminate {
  background-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5:indeterminate:after {
  content: '';
  display: block;
  position: relative;
  color: white;
  height: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.c5:indeterminate:disabled {
  background-color: #dcdce4;
  border: 1px solid #c0c0cf;
}

.c5:indeterminate:disabled:after {
  background-color: #8e8ea9;
}

.c16 {
  position: absolute;
  top: 12px;
}

.c1 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
}

.c7 path {
  fill: currentColor;
}

.c14 {
  display: none;
}

.c10 {
  user-select: none;
}

.c12:focus {
  outline: 2px solid #4945ff;
  outline-offset: -2px;
}

<div>
  <div
    class="c0 "
    tabindex="0"
  >
    <button
      aria-hidden="true"
      aria-label="Folder 1"
      class="c1"
      tabindex="-1"
      tag="button"
      type="button"
    />
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class=""
        >
          <input
            aria-labelledby="folder-3-title"
            class="c5"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="c6"
      >
        <svg
          class="c7"
          fill="currentColor"
          height="2.4rem"
          viewBox="0 0 32 32"
          width="2.4rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 9H16.414L13 5.586A1.98 1.98 0 0 0 11.586 5H5a2 2 0 0 0-2 2v18.078A1.926 1.926 0 0 0 4.924 27H27.11A1.89 1.89 0 0 0 29 25.111V11a2 2 0 0 0-2-2M5 7h6.586l2 2H5z"
          />
        </svg>
      </div>
      <h2
        class="c8 c9 c10"
        id="folder-3-title"
      >
        <button
          class="c11 c12"
          type="button"
        >
          <div
            class="c9"
          >
            <span
              class="c13"
            >
              Pictures
            </span>
          </div>
        </button>
      </h2>
      <div
        class="c14"
      >
        <div
          class="c15 c3 c16"
        />
      </div>
    </div>
  </div>
  <span
    class="c17"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`FolderCard renders and matches the snapshot 1`] = `
.c0 {
  position: relative;
}

.c2 {
  background: #ffffff;
  padding-block: 12px;
  padding-inline: 12px;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  border-color: #eaeaef;
  box-shadow: 0px 1px 4px rgba(33, 33, 52, 0.1);
  cursor: pointer;
}

.c4 {
  background: #eaf5ff;
  color: #66b7f1;
  padding-block-start: 8px;
  padding-inline-end: 12px;
  padding-block-end: 8px;
  padding-inline-start: 12px;
  border-radius: 4px;
}

.c6 {
  position: relative;
  overflow: hidden;
  max-width: 100%;
}

.c9 {
  padding-block: 4px;
  padding-inline: 4px;
  max-width: 100%;
}

.c13 {
  right: 16px;
}

.c11 {
  font-size: 1.4rem;
  line-height: 1.43;
  font-weight: 500;
  color: currentcolor;
}

.c3 {
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.c7 {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}

.c15 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  position: absolute;
  top: 12px;
}

.c1 {
  height: 100%;
  left: 0;
  position: absolute;
  opacity: 0;
  top: 0;
  width: 100%;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
}

.c5 path {
  fill: currentColor;
}

.c12 {
  display: none;
}

.c8 {
  user-select: none;
}

.c10:focus {
  outline: 2px solid #4945ff;
  outline-offset: -2px;
}

<div>
  <div
    class="c0 "
    tabindex="0"
  >
    <button
      aria-hidden="true"
      aria-label="Folder 1"
      class="c1"
      tabindex="-1"
      tag="button"
      type="button"
    />
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <svg
          class="c5"
          fill="currentColor"
          height="2.4rem"
          viewBox="0 0 32 32"
          width="2.4rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 9H16.414L13 5.586A1.98 1.98 0 0 0 11.586 5H5a2 2 0 0 0-2 2v18.078A1.926 1.926 0 0 0 4.924 27H27.11A1.89 1.89 0 0 0 29 25.111V11a2 2 0 0 0-2-2M5 7h6.586l2 2H5z"
          />
        </svg>
      </div>
      <h2
        class="c6 c7 c8"
        id="folder-1-title"
      >
        <button
          class="c9 c10"
          type="button"
        >
          <div
            class="c7"
          >
            <span
              class="c11"
            >
              Pictures
            </span>
          </div>
        </button>
      </h2>
      <div
        class="c12"
      >
        <div
          class="c13 c3 c14"
        />
      </div>
    </div>
  </div>
  <span
    class="c15"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;
